# laplax

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: api_reference.md  design_philosophy.md  index.md
docs/api/: curv.curv.md  curv.curv_approx.md  curv.md  curvature.md  eval.calibrate.md  eval.md  eval.metrics.md  eval.pushforward.md  util.flatten.md  util.loader.md  util.md  util.mv.md  util.ops.md  util.tree.md
docs/css/: custom.css
examples/: 0001_low_rank_excurse.ipynb  0001_neural_tangent_kernel.ipynb  0001_posterior_gp_kernel.ipynb  helper.py  plotting.py
laplax/: __init__.py  baseline.py  config.py  enums.py  laplace.py  types.py
laplax/curv/: __init__.py  cov.py  diagonal.py  full.py  ggn.py  hessian.py  lanczos.py  loss.py  low_rank.py  util.py
laplax/eval/: __init__.py  calibrate.py  metrics.py  push_forward.py  pushforward.py  utils.py
laplax/util/: __init__.py  flatten.py  loader.py  mv.py  ops.py  tree.py  util.py  utils.py
tests/test_curv/: test_cov.py  test_curv_linear_regression.py  test_ggn.py  test_hessian.py
tests/test_curv/cases/: covariance.py  rosenbrock.py
tests/test_eval/: test_calibrate.py  test_push_forward.py  test_pushforward.py  test_utils.py
tests/test_eval/cases/: classification.py  regression.py
tests/test_util/: test_loader.py  test_tree.py
