# See https://packaging.python.org/en/latest/specifications/pyproject-toml/

# PEP 621 Project Metadata
# See https://peps.python.org/pep-0621/

[project]
authors = [
    { name = "Bálint Mucsányi", email = "b.h.mucsanyi@gmail.com" },
    { name = "Tobias Weber", email = "t.weber@uni-tuebingen.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = ["jax", "jaxtyping"]
description = "Laplace approximations in JAX."
dynamic = ["version"]
keywords = [
    "laplace approximation",
    "uncertainty quantification",
    "Pierre Simon Marquis de Laplace",
]
name = "laplax"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "ruff",
    "jupyterlab",
    "pre-commit",
    "pytest",
    "tox-uv",
    "pyright",
    "pytest-cases",
]
test = ["flax", "equinox"]

# PEP 518 Build System Configuration
# See https://peps.python.org/pep-0518/

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["laplax"]

[tool.setuptools.dynamic]
version = { attr = "laplax.__version__" }

# Testing Configuration
# See https://docs.pytest.org/en/stable/reference/customize.html

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

# Linting Configuration
# See https://docs.astral.sh/ruff/rules/#legend

[tool.ruff]
preview = true
extend-include = ["*.ipynb"]
exclude = [".git", "__pycache__"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle error
    "EM", # flake8-errmsg
    "ERA", # eradicate
    "F", # Pyflakes
    "FBT", # flake8-boolean-trap
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake80logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N", # pep8-naming
    "NPY", # NumPy
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff
    "S", # flake8-bandit
    "SLOT", # flake8-slots
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "UP", # pyupgrade
    "W", # pycodestyle warning
    "YTT", # flake8-2020
]
ignore = [
    # Conflicting lint rules with Ruff's formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    # This is research code, attribute names are more flexible with casing
    "E741",
    "N802",
    "N803",
    "N806",
    # Magic values are fine for academic code as longs as they are not overused
    "PLR2004",
    "PLR0912",
    "PLR0912",
    "PLR0914",
    "PLR0914",
    # Assignments before return can emphasize the code's semantic structure
    "RET504",
    "S403",
    # Currently set some simplifications
    "ERA001", # no-commented out code
    "D102", # no docstrings
    "ANN401", # no type hints
    "ANN202", # no type hints
    "ANN001", # no type hints
    "ANN003", # no type hints
    "ANN201", # no type hints
    "D103", # no docstrings
    "TD003", #Found TODO in code
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101"] # Use of assert is allowed in test files

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"
